# STATStools

./: .gitignore  README.md  pyproject.toml  setup.py
example/: stat.parquet  stat_boxcox.parquet
example/sql/: sql_query_1_2.sql
src/statstools/: __init__.py
static/css/: main.css
statstools/: __init__.py
