[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statstools"
version = "0.1.0"
description = "统一计算工具"
authors = [
    {name = "caomh", email = "minghaocao@yeah.net"}
]
license = {text = "MIT"}
keywords = ["statistics", "tools", "calculation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "polars>=0.19.3",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
]

requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy"
]

[project.scripts]
statstools = "statstools:main"

[project.urls]
Homepage = "https://github.com/yourusername/statstools"
Repository = "https://github.com/yourusername/statstools"
Issues = "https://github.com/yourusername/statstools/issues"